Minor padding / text alignment fixes

--- a/app/styles/_recipe.sass
+++ b/app/styles/_recipe.sass
@@ -88,6 +88,7 @@
   font-size: 18px
   margin: 0 15px
   padding: 5px
+  text-align: center
   i
     margin-right: 10px
 
@@ -127,12 +128,14 @@ h3
 .recipe__author
   background: lighten($nav-bg, 10%)
   border-radius: 0 0 5px 5px
-  color: lighten($nav-bg, 40%)
+  color: lighten($nav-bg, 50%)
   font-size: 16px
-  margin: 20px -15px -15px -15px
+  margin: 25px -15px -15px -15px
   padding: 15px
   i
     margin-right: 8px
+  .author-name
+    margin-left: 20px
 
 .recipe__button--edit
   background: $nav-bg
